fixed: visibility text in blocks

--- a/src/App.css
+++ b/src/App.css
@@ -64,5 +64,5 @@
   border-image-repeat: stretch;
   border-style: solid;
   border-color: transparent;
-  backdrop-filter: blur(6px)
+  backdrop-filter: blur(10px)
 }
